# lidar_bev_migration

bird_eye_view_2/: package.xml  setup.cfg  setup.py
bird_eye_view_2/bird_eye_view_2/: bird_eye_view.py
lidar_bev/: CMakeLists.txt  package.xml  package_migrado.xml
lidar_bev/config/: params.yml
lidar_bev/include/lidar_bev/: cloud_filter.hpp
lidar_bev/launch/: lidar_bev.launch.py
lidar_bev/scripts/: birdview_detection_refiner.py  birdview_detection_refiner_migrated.py  detections_refinement.py  detections_refinement_migrated.py  draw_bev_detections.py  draw_bev_detections_migrated.py  max_points_map_migrated.py
lidar_bev/src/: lidar_bev.cpp
msg_interfaces/: CMakeLists.txt  README.md  package.xml
msg_interfaces/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg  AudioData.msg  Buoy.msg  BuoyArray.msg  CanDetection.msg  CanDetectionArray.msg  Creature.msg  LandingPadDetection.msg  NavInfo.msg  Object.msg  ObjectArray.msg  Obstacle.msg  ParamVec.msg  RNMarker.msg  RNMarkerDetectionArray.msg  WamvPose.msg
